[package]

name = "iron_kaleidoscope"
version = "0.0.1"
authors = ["Jauhien Piatlicki <jauhien@gentoo.org>"]
edition = "2018"

[dependencies]
regex = "1.4.3"
structopt = { version = "0.3", default-features = false }
llvm-sys = "110.0.0"

[dependencies.iron_llvm]
git = "https://github.com/jauhien/iron-llvm.git"
